data/Java/07-missing-semi/5/[M]Error.txt
*https://www.tutorialspoint.com/java/java_innerclasses.htm
MyClass.java:20: error: ';' expected
       outer.my_Method()
                        ^